fixed units gap

--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -322,18 +322,18 @@ body {
     line-height: normal;
 }
   
-  .show {
+.show {
     display: block;
-  }
+}
 
-  .units {
+.units {
     display: grid;
-    grid-template-columns: repeat(3, 1fr); /* 3 units per row */
-    gap: 10px; /* Adjust the gap between units as needed */
+    grid-template-columns: repeat(4, 1fr); /* 3 units per row */
+    gap: 5px; /* Adjust the gap between units as needed */
     background-color: #00000023;
     border-radius: 5px;
-    margin: 4px, 4px;
-    padding: 15px;
+    margin: 4px;
+    padding: 10px;
     height: 600px;
     overflow-x: hidden;
     overflow-y: auto;
@@ -348,19 +348,19 @@ body {
     display: flex;
     flex-wrap: wrap;
     justify-content: center; /* Center the units horizontally */
-    padding: 10px;
+    padding: 0;
     width: 100%;
-    gap: 10px; /* Add gap between units */
+    gap: 5px; /* Add gap between units */
 }
 
 .summary-units {
-    flex: 1 1 calc(33.33% - 10px); /* Adjust width to 3 units per row */
-    max-width: 80%;/* Ensure max-width also follows the same logic */
+    flex: 1 1 calc(25% - 10px); 
+    max-width: 100%;
     background-color: #4DA9AF;
     height: 245px;
-    border-radius: 15px;
-    margin: 5px;
-    padding: 5%;
+    border-radius: 20px;
+    margin: 10px;
+    padding: 25px;
     font-family: "Inter", Helvetica;
     color: #ffffff;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
